--- a/selectors/ssft/ssft-work.en.html
+++ b/selectors/ssft/ssft-work.en.html
@@ -2,8 +2,8 @@
 <html lang="en" class="formal-specification status-work-in-progress">
 <head>
 <title>Selectors Serialization Format for Testing (SSFT)</title>
-<link rel="stylesheet" href="http://suika.fam.cx/www/style/html/spec">
-<link rel="license" href="http://suika.fam.cx/c/gnu/fdl">
+<link rel="stylesheet" href="https://suika.suikawiki.org/www/style/html/spec">
+<link rel="license" href="https://suika.suikawiki.org/c/gnu/fdl">
 </head>
 <body class="has-abstract">
 
@@ -14,28 +14,28 @@
 
 <dl class="versions-uri">
 <dt>This Version</dt>
-  <dd><code class="URI">&lt;<a href="http://suika.fam.cx/www/markup/selectors/ssft/ssft-work"
+  <dd><code class="URI">&lt;<a href="https://suika.suikawiki.org/www/markup/selectors/ssft/ssft-work"
       >http://suika.fam.cx/www/markup/selectors/ssft/ssft-work</a>&gt;</code></dd>
 <dt>Latest Version</dt>
-  <dd><code class="URI">&lt;<a href="http://suika.fam.cx/www/markup/selectors/ssft/ssft"
+  <dd><code class="URI">&lt;<a href="https://suika.suikawiki.org/www/markup/selectors/ssft/ssft"
       >http://suika.fam.cx/www/markup/selectors/ssft/ssft</a>&gt;</code></dd>
 <dt>Latest Working Draft</dt>
-  <dd><code class="URI">&lt;<a href="http://suika.fam.cx/www/markup/selectors/ssft/ssft-work"
+  <dd><code class="URI">&lt;<a href="https://suika.suikawiki.org/www/markup/selectors/ssft/ssft-work"
       >http://suika.fam.cx/www/markup/selectors/ssft/ssft-work</a>&gt;</code></dd>
 <dt>Previous Version</dt>
-  <dd><code class="URI">&lt;<a href="http://suika.fam.cx/www/markup/selectors/ssft/ssft-20071105"
+  <dd><code class="URI">&lt;<a href="https://suika.suikawiki.org/www/markup/selectors/ssft/ssft-20071105"
       >http://suika.fam.cx/www/markup/selectors/ssft/ssft-20071105</a>&gt;</code></dd>
 <dt>Version History</dt>
-  <dd><code class=URI>&lt;<a href="http://suika.fam.cx/gate/cvs/markup/selectors/ssft/ssft-work.en.html">http://suika.fam.cx/gate/cvs/markup/selectors/ssft/ssft-work.en.html</a>&gt;</code></dd>
+  <dd><code class=URI>&lt;<a href="https://suika.suikawiki.org/gate/cvs/markup/selectors/ssft/ssft-work.en.html">http://suika.fam.cx/gate/cvs/markup/selectors/ssft/ssft-work.en.html</a>&gt;</code></dd>
 <dt id=author>Author</dt>
-  <dd><a href="http://suika.fam.cx/~wakaba/who?" rel="author"
+  <dd><a href="https://suika.suikawiki.org/~wakaba/who?" rel="author"
       lang=ja>Wakaba</a>
-  <code class="mail">&lt;<a href="mailto:w@suika.fam.cx" rel="author"
+  <code class="mail">&lt;<a href="mailto:wakaba@suikawiki.org" rel="author"
       >w@suika.fam.cx</a>&gt;</code></dd>
 </dl>
 
 <p class="copyright" lang="en">&#xA9; <time>2007</time> <a
-    href="http://suika.fam.cx/~wakaba/who?" rel="author">Wakaba</a>.
+    href="https://suika.suikawiki.org/~wakaba/who?" rel="author">Wakaba</a>.
 Permission is granted to copy, distribute and/or modify this document
 under the terms of the <a rel="license"
 href="http://www.gnu.org/copyleft/fdl.html">GNU Free Documentation License</a>,
@@ -68,8 +68,8 @@ time of its publication.  Other documents might supersede this document.</p>
 <p><!-- This document is the specification -->This document is a working draft
 of <abbr title="Selectors Serialization Format for Testing">SSFT</abbr>, 
 produced as part of the
-<a href="http://suika.fam.cx/www/markup/html/whatpm/readme">Whatpm</a> product
-of the <a href="http://suika.fam.cx/www/manakai-core/doc/web/">manakai</a> 
+<a href="https://suika.suikawiki.org/www/markup/html/whatpm/readme">Whatpm</a> product
+of the <a href="https://suika.suikawiki.org/www/manakai-core/doc/web/">manakai</a> 
 project.
 It might be updated, replaced, or obsoleted by
 other documents at any time.  It is inappropriate to
